--- a/DiceMaster3600/App.xaml
+++ b/DiceMaster3600/App.xaml
@@ -6,8 +6,10 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />-->
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Blue.xaml" />
                 <ResourceDictionary Source="View/Theme/ColoursTheme.xaml"/>
                 <ResourceDictionary Source="View/Theme/FontTheme.xaml"/>
                 <ResourceDictionary Source="View/Theme/Styles.xaml"/>
