--- a/DiceMaster3600/View/Theme/Styles.xaml
+++ b/DiceMaster3600/View/Theme/Styles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:visualHelpers="clr-namespace:DiceMaster3600.View.Helpers"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF">
     
     <Style x:Key="CircularButton" TargetType="Button">
@@ -28,7 +29,7 @@
                               Background="{TemplateBinding Background}">
 
                             <TextBlock Text="{TemplateBinding Property=Content}" 
-                                       Margin="50,0,0,0"
+                                       Margin="20,0,20,0"
                                        FontFamily="{StaticResource MuseoFontFamily1}"
                                        VerticalAlignment="Center"/>
                         </Grid>
@@ -39,13 +40,17 @@
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="FontFamily" Value="{StaticResource MuseoFontFamily1}"/>
         </Style.Setters>
-        
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
                 <Setter Property="Background" Value="#22202f"/>
             </Trigger>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver" Value="True"/>
+                </MultiTrigger.Conditions>
+                <Setter Property="Background" Value="{StaticResource MeoptaLightBlueBrush}"/>
+            </MultiTrigger>
         </Style.Triggers>
-        
     </Style>
 
     <Style TargetType="TextBox" x:Key="PlaceHolderTextBox" >
@@ -102,7 +107,6 @@
                         BorderBrush="Black" 
                         Padding="2">
                         <Grid>
-                            <!-- TextBlock pro zástupný text -->
                             <TextBlock x:Name="PlaceholderText" 
                                    Text="{Binding Path=(visualHelpers:TextBoxHelpers.PlaceholderText), RelativeSource={RelativeSource TemplatedParent}}" 
                                    VerticalAlignment="Center" 
@@ -121,8 +125,101 @@
                             <Setter TargetName="PlaceholderText" Property="Visibility" Value="Visible"/>
                             <Setter Property="Background" Value="{StaticResource MeoptaLogoWhiteBrush}"/>
                         </Trigger>
-                        <!-- Zde můžete přidat další logiku pro zobrazení/skrytí zástupného textu založenou na obsahu nebo jiných podmínkách -->
                     </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="BaseTextBoxStyle" TargetType="TextBox">
+        <Setter Property="Width" Value="380"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="BorderThickness" Value="0,0,0,1"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style x:Key="BaseComboBoxStyle" TargetType="ComboBox" x:Name="MeoComboBox">
+        <Setter Property="BorderThickness" Value="0,0,0,1"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="Foreground" Value="{StaticResource MeoptaLogoBlackBrush}"/>
+        <Setter Property="Padding" Value="10,3"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBox">
+                    <Grid>
+                        <ToggleButton 
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        Grid.Column="2"
+                        IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                        Padding="{TemplateBinding Padding}">
+                            <ToggleButton.Template>
+                                <ControlTemplate TargetType="ToggleButton">
+                                    <Border Name="ToggleButtonBorder"
+                                        Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="20"/>
+                                            </Grid.ColumnDefinitions>
+                                            <ContentPresenter Grid.Column="0" 
+                                                          HorizontalAlignment="Left" 
+                                                          VerticalAlignment="Center"
+                                                          Margin="{TemplateBinding Padding}"/>
+                                            <Path Grid.Column="1" 
+                                              Fill="{TemplateBinding Foreground}" 
+                                              HorizontalAlignment="Center" 
+                                              VerticalAlignment="Center" 
+                                              Data="M0,0 L4,4 L8,0 Z"/>
+                                        </Grid>
+                                    </Border>
+                                </ControlTemplate>
+                            </ToggleButton.Template>
+                        </ToggleButton>
+                        <ContentPresenter Name="ContentSite"
+                                      IsHitTestVisible="False"
+                                      Content="{TemplateBinding SelectionBoxItem}"
+                                      ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+                                      ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                      Margin="{TemplateBinding Padding}"
+                                      VerticalAlignment="Center"
+                                      HorizontalAlignment="Left"/>
+                        <TextBox x:Name="PART_EditableTextBox"
+                                 Width="{TemplateBinding ActualWidth}"
+                                 Height="{TemplateBinding ActualHeight}"
+                                 BorderThickness="{TemplateBinding BorderThickness}"
+                                 FontSize="15"
+                                 VerticalContentAlignment="Bottom"
+                                 HorizontalContentAlignment="Left"
+                                 Visibility="Hidden"/>
+                        <Popup Name="Popup"
+                           IsOpen="{TemplateBinding IsDropDownOpen}"
+                           Placement="Bottom"
+                           Focusable="False"
+                           AllowsTransparency="True"
+                           IsEnabled="{TemplateBinding IsEnabled}">
+                            <Grid Name="DropDown"
+                              SnapsToDevicePixels="True"                
+                              MinWidth="{TemplateBinding ActualWidth}"
+                              MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                <Border x:Name="DropDownBorder"
+                                    Background="White"
+                                    BorderThickness="1"
+                                    BorderBrush="{StaticResource MeoptaBackgroundBrush}"/>
+                                <ScrollViewer CanContentScroll="True">
+                                    <ItemsPresenter/>
+                                </ScrollViewer>
+                            </Grid>
+                        </Popup>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -189,6 +286,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-
+    
+    <Style x:Key="DynamicSnackbarStyle" TargetType="materialDesign:Snackbar">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Path=MessageType}" Value="Error">
+                <Setter Property="Background" Value="Red"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Path=MessageType}" Value="Success">
+                <Setter Property="Background" Value="Green"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 
 </ResourceDictionary>
