--- a/DiceMaster3600/View/DiceGameView.xaml
+++ b/DiceMaster3600/View/DiceGameView.xaml
@@ -3,10 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DiceMaster3600.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             xmlns:controls="clr-namespace:DiceMaster3600.View.Controls"
+             mc:Ignorable="d">
+    
+    <Grid Background="Transparent" Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <Border BorderBrush="{StaticResource MeoptaLogoBlackBrush}"
+                BorderThickness="1"
+                CornerRadius="2">
+            <Image x:Name="MyImage" />
+        </Border>
+
+        <StackPanel Grid.Column="2">
+            <controls:DiceControl Margin="0,0,0,10" Width="50" Height="50"/>
+            <controls:DiceControl Margin="0,0,0,10" Width="50" Height="50"/>
+            <controls:DiceControl Margin="0,0,0,10" Width="50" Height="50"/>
+            <controls:DiceControl Margin="0,0,0,10" Width="50" Height="50"/>
+            <controls:DiceControl Margin="0,0,0,10" Value="5" Width="50" Height="50"/>
+        </StackPanel>
+
+        <controls:YahtzeeTable Grid.Column="4"/>
+        <ListBox Grid.Row="2" Grid.ColumnSpan="5"></ListBox>
     </Grid>
 </UserControl>
